# blackguard

./: README.md  blackguard.code-workspace  docker-compose.yaml  northwind.sql
src/: main.py  pyproject.toml
src/app/: generate_inserts.py  generate_select.py
src/app/database/: database_config.py  engine.py
src/tests/app/: test_generate_inserts.py  test_generate_select.py
