[project]
name = "Blackguard"
version = "0.1.0"
description = "Generate SQL insert statements for test data."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyodbc>=5.3.0",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
